syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/http.proto";


option java_multiple_files = true;
option java_package = "io.quarkus.example";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service UserGrpcService {
  rpc SayHello (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/grpc/test"
      body: "*"
    };
  }

  rpc loginGrpc (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/grpc/login-grpc"
      body: "*"
    };
  }
}

// login service from Dashboard to User
message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  string token = 3;
}



